variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:3: error: not found: value caseOrange
while((2*nbBis)!=(caseOrange+1)){
                  ^